Chunk generation is now on the heap so that we no longer have a stack overflow

--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(Sandbox
     src/Layer/Server.cpp
     src/Layer/Server.h
 
+    src/System/ChunkSystem.cpp
     src/System/ChunkSystem.h
     src/System/System.h
 
