Added systems to generate and build chunk mesh independent

--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -29,7 +29,7 @@ add_executable(Sandbox
     src/Primitives.cpp
     src/Primitives.h
  
- )
+  "src/Component/ServerComponent.h")
 
 target_include_directories(Sandbox PUBLIC src)
 
