Fixed BuildPhysX.cmake test variable naming and ignore the submodule with dirty changes since tests are build in source

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,4 @@
 [submodule "Aphelion/thirdParty/PhysX"]
 	path = Aphelion/thirdParty/PhysX
 	url = https://github.com/phcerdan/PhysX
+	ignore = dirty
