--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(Sandbox
 
     src/Component/ChunkComponent.h
     src/Component/Component.h
+    src/Component/ServerComponent.h
 
     src/Layer/Client.cpp
     src/Layer/Client.h
@@ -28,46 +29,18 @@ add_executable(Sandbox
     src/PacketBuffer.h
     src/Primitives.cpp
     src/Primitives.h
- 
-  "src/Component/ServerComponent.h")
+)
 
 target_include_directories(Sandbox PUBLIC src)
 
-# We don't need to copy a static lib to the executable directory
-# if(BUILD_SHARED_LIBS)
-#     add_custom_target(CopyDLL 
-#                         ALL COMMAND ${CMAKE_COMMAND} -E copy
-#                         $<TARGET_FILE:Aphelion::Runtime>
-#                         $<TARGET_FILE_DIR:Sandbox>
-#                         COMMENT "Copying Aphelion.dll to output dir"
-#     )
-# endif()
-# 
-# if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-#     add_custom_target(CopyPDB
-#                     ALL COMMAND ${CMAKE_COMMAND} -E copy
-#                     $<TARGET_FILE_DIR:Aphelion::Runtime>/Runtime.pdb 
-#                     $<TARGET_FILE_DIR:Sandbox>
-#                     COMMENT "Copying Aphelion.pdb to output dir"
-#     )
-# endif ()
-
-if (EXISTS ${CMAKE_SOURCE_DIR}/Aphelion/res)
-    add_custom_target(CopyGameAssets
-                    ALL COMMAND ${CMAKE_COMMAND} -E copy_directory
-                    ${CMAKE_SOURCE_DIR}/Aphelion/res 
-                    $<TARGET_FILE_DIR:Sandbox>/res
-                    COMMENT "Copying Aphelion resources to output dir"
-    )
-endif()
-
-if (EXISTS ${CMAKE_SOURCE_DIR}/Sandbox/res)
-    add_custom_target(CopyEngineAssets
-                    ALL COMMAND ${CMAKE_COMMAND} -E copy_directory
-                    ${CMAKE_SOURCE_DIR}/Sandbox/res 
-                    $<TARGET_FILE_DIR:Sandbox>/res
-                    COMMENT "Copying Sandbox resources to output dir"
-    )
-endif()
+add_custom_command(
+    TARGET Sandbox
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} 
+    -E copy_directory
+    ${CMAKE_CURRENT_SOURCE_DIR}/res/
+    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/res/
+    COMMENT "Copying Sandbox resources to output dir"
+)
 
 target_link_libraries(Sandbox PUBLIC Aphelion::Runtime)
