Adjusted PhysX build to use the same windows CRT. Imported the hello world example from NVidea (you can see this using the PhysX Visual Debugger

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,12 @@ cmake_minimum_required(VERSION 3.16)
 ##############################
 # Options
 set(BUILD_SHARED_LIBS "OFF" CACHE BOOL "" FORCE)
-set(CMAKE_BUILD_TYPE "DEBUG" CACHE STRING "")
+set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "")
 
 # Set some global variables since these have to be consistent amongst all targets
-set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded${CMAKE_BUILD_TYPE}")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/output")
+message(STATUS "CRT: ${CMAKE_MSVC_RUNTIME_LIBRARY}")
 
 project(Application)
 
