Immediate push: Abstracting PhysX actor construction

--- a/Aphelion/src/Aphelion/Core/CMakeLists.txt
+++ b/Aphelion/src/Aphelion/Core/CMakeLists.txt
@@ -66,6 +66,8 @@ target_precompile_headers(
         <glm/gtc/type_ptr.hpp>
         <glm/gtx/quaternion.hpp>
         
+        <PxPhysicsAPI.h>
+
         Log.h
 )
 
