--- a/Aphelion/src/Aphelion/Physics/CMakeLists.txt
+++ b/Aphelion/src/Aphelion/Physics/CMakeLists.txt
@@ -3,13 +3,23 @@ cmake_minimum_required(VERSION 3.16)
 add_library(
     Physics
 
-    PhysicsActor.h
-    PhysicsActor.cpp
+    Actor/PhysicsActor.h
+    
+    Actor/RigidDynamic.cpp
+    Actor/RigidDynamic.h
+    Actor/RigidStatic.cpp
+    Actor/RigidStatic.h
+
     PhysicsError.h
-    PhysicsFoundation.h
     PhysicsFoundation.cpp
-    PhysicsScene.h
+    PhysicsFoundation.h
+    PhysicsGeometry.cpp
+    PhysicsGeometry.h
+    PhysicsGLM.h
+    PhysicsMaterial.cpp
+    PhysicsMaterial.h
     PhysicsScene.cpp
+    PhysicsScene.h
 )
 
 add_library(Aphelion::Physics ALIAS Physics)
@@ -17,31 +27,12 @@ add_library(Aphelion::Physics ALIAS Physics)
 # target_precompile_headers(Physics REUSE_FROM Aphelion::Core)
 target_include_directories(Physics PUBLIC ../../)
 
-# get_target_property(PXPROP PhysX::PhysXCommon BINARY_DIR)
-# get_target_property(APPROP Physics BINARY_DIR)
-# 
-# message(WARNING "PXPROP: ${PXPROP}")
-# message(WARNING "APPROP: ${APPROP}")
-
-file(GLOB DLLS
-  LIST_DIRECTORIES false
-  "${CMAKE_BINARY_DIR}/physx/sdk_source_bin/*.dll"
-)
-# file(COPY ${MY_PUBLIC_HEADERS} DESTINATION myDestination)
-# message(WARNING DIR ${CMAKE_BINARY_DIR})
-# message(WARNING DLLS ${DLLS})
-# add_custom_command(
-#     Physics
-#     POST_BUILD
-# 
-# )
-
 target_link_libraries(
     Physics
     PUBLIC
     Aphelion::Core
     #PRIVATE temp while we test physics is initialized correctly
-    #PRIVATE
+    # PRIVATE
     PhysX::PhysXExtensions
     PhysX::PhysXCommon
 )
