Added physics shape class so that we can retrieve shapes and is sleeping getter to rigid bodies

--- a/Aphelion/src/Aphelion/Physics/CMakeLists.txt
+++ b/Aphelion/src/Aphelion/Physics/CMakeLists.txt
@@ -18,6 +18,8 @@ add_library(
     PhysicsMaterial.h
     PhysicsScene.cpp
     PhysicsScene.h
+    PhysicsShape.cpp
+    PhysicsShape.h
     RigidBody.cpp
     RigidBody.h
 )
