Added Bounds class. Renderer now uses world bounds of the rigid body

--- a/Aphelion/src/Aphelion/Physics/CMakeLists.txt
+++ b/Aphelion/src/Aphelion/Physics/CMakeLists.txt
@@ -8,6 +8,8 @@ add_library(
     # Actor/RigidStatic.cpp
     # Actor/RigidStatic.h
 
+    PhysicsBounds.h
+    PhysicsBounds.cpp
     PhysicsError.h
     PhysicsFoundation.cpp
     PhysicsFoundation.h
