Fixed release build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,16 @@ endif()
 set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "")
 
 # Set some global variables since these have to be consistent amongst all targets
-set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded${CMAKE_BUILD_TYPE}")
+
+# Normally you can set this during build time. But PhysX is build during configure timeout
+# so we have to set it already
+set(MSVC_EXTENSION ${CMAKE_BUILD_TYPE})
+if(CMAKE_BUILD_TYPE STREQUAL RelWithDebInfo)
+    set(MSVC_EXTENSION "")
+endif()
+
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded${MSVC_EXTENSION}")
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/output")
 message(STATUS "CRT: ${CMAKE_MSVC_RUNTIME_LIBRARY}")
 
