Added PhysicsQuery file where all query data structs are defined

--- a/Aphelion/src/Aphelion/Physics/CMakeLists.txt
+++ b/Aphelion/src/Aphelion/Physics/CMakeLists.txt
@@ -19,6 +19,8 @@ add_library(
     PhysicsLayer.h
     PhysicsMaterial.cpp
     PhysicsMaterial.h
+    PhysicsQuery.cpp
+    PhysicsQuery.h
     PhysicsScene.cpp
     PhysicsScene.h
     PhysicsShape.cpp
