Added raycast function to physics scene

--- a/Demo/Physics/CMakeLists.txt
+++ b/Demo/Physics/CMakeLists.txt
@@ -6,6 +6,8 @@ add_executable(
     Entry.cpp
     PhysicsDemoLayer.h
     PhysicsDemoLayer.cpp
+    PhysicsRaycastLayer.h
+
 )
 
 target_link_libraries(
