Added physics component. But clearing and creating a new one crashes the program because of a nullptr

--- a/Aphelion/CMakeLists.txt
+++ b/Aphelion/CMakeLists.txt
@@ -87,6 +87,7 @@ add_subdirectory(src/Aphelion/Renderer)
 add_library(
     Runtime
 
+    src/Aphelion/ECS/Component.cpp
     src/Aphelion/ECS/Component.h
     src/Aphelion/ECS/Entity.h
     src/Aphelion/ECS/Registry.cpp
